--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,8 @@
   ],
   "require": {
     "php":                  "^7.4|^8.0",
-    "symfony/css-selector": "^4.4|^5.0",
-    "masterminds/html5":    "^2.6",
-    "ext-dom":              "*"
+    "ext-dom":              "*",
+    "symfony/dom-crawler": "^5.3"
   },
   "autoload": {
     "psr-4": {
